--- a/src/pages/profile/styles.css
+++ b/src/pages/profile/styles.css
@@ -9,9 +9,9 @@
 .heading {
 	font-size: x-large;
 	background: rgb(255, 254, 254);
-	padding: 0.8em;
+	padding: 0.8rem;
 	border-radius: 8px;
-	margin-bottom: 2em;
+	margin-bottom: 2rem;
 	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
@@ -21,42 +21,33 @@
 	justify-content: center;
 	border-radius: 8px;
 	background: rgb(255, 254, 254);
-	padding-top: 1.5em;
-	padding-bottom: 0.5em;
-	padding-left: 1.7em;
-	padding-right: 0em;
-	width: 30%;
-	max-width: 400px;
-	width: 80%;
+	padding: 1.5rem;
+	width: 400px;
 	box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
-.profileContent > input[type='text'] {
-	width: 90%;
-	padding: 10px;
-	margin: 10px 0;
-	margin-bottom: 1.2em;
-	box-sizing: border-box;
-	border-radius: 4px;
-	border: 0px;
-	outline: 0px;
-	background: white;
+
+.profileContent p:nth-of-type(odd) {
+	margin-bottom: 0.7rem;
 }
 
-.profileContent p,
-.profileContent input {
-	display: block;
+.profileContent p:nth-of-type(even) {
+	margin-bottom: 1.5rem;
 }
 
-@media screen and (max-width: 500px) {
+.profileContent p:last-of-type{
+	margin-bottom: 0px;
+}
+
+@media screen and (max-width: 400px) {
 	.heading {
-		padding: 0.7em 1.2em;
+		padding: 0.7rem 1.2rem;
 	}
 	.profile {
-		padding: 0 0.5em;
+		padding: 0 0.5rem;
 	}
 	.profileContent {
-		padding-left: 1em;
-		width: 95%;
+		padding: 1.2rem;
+		width: 97%;
 	}
 }
